--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/cms
+spring.datasource.url=jdbc:postgresql://localhost:5432/cms
 spring.datasource.username=cms
 spring.datasource.password=cms
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
+
+
+#swagger config
+swagger.application.api.title=csm Service
+swagger.application.api.description=Group of services provided for CSM
+swagger.application.api.license=APL V2
+swagger.application.api.licenseUrl=http://www.apache.org/licenses/LICENSE-2.0.html
+swagger.application.api.termsOfServiceUrl=
+swagger.application.api.contact=
+swagger.application.api.email=
+swagger.application.api.version=APL V2
